--- a/src/client/app.css
+++ b/src/client/app.css
@@ -1,8 +1,17 @@
-h1 {
-  color: green;
+
+@font-face {
+  font-family: myFirstFont;
+  src: url(../fonts/mario.woff);
 }
 
+* {
+  font-family: myFirstFont;
+}
+
+
 body {
-  text-align: center;
-  margin: auto;
+   background-image: url(../img/super.jpg);
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-color: black;
 }
