added multiplayer functionality

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -10,7 +10,7 @@
 
 
 body {
-   background-image: url(../img/super.jpg);
+   background-image: url(../img/maxresdefault.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-color: black;
